# hybrid-rag

./: .env.example  .gitignore  README.md  pyproject.toml
graph_store/: entity_chunks.json  entity_vectors.json  graph.json  knowledge_graph.html
src/hybrid_rag/: __init__.py
src/hybrid_rag/application/: __init__.py  dtos.py  ingest.py  query.py
src/hybrid_rag/domain/: __init__.py  entities.py  ports.py  services.py  value_objects.py
src/hybrid_rag/infrastructure/: __init__.py  config.py  logging.py
src/hybrid_rag/infrastructure/faiss/: __init__.py  vector_store.py
src/hybrid_rag/infrastructure/networkx/: __init__.py  graph_store.py
src/hybrid_rag/infrastructure/ollama/: __init__.py  cache.py  client.py  document_analyzer.py  embeddings.py  llm.py  triple_extractor.py  triple_refiner.py
src/hybrid_rag/infrastructure/pypdf/: __init__.py  reader.py
src/hybrid_rag/infrastructure/templates/: __init__.py  graph.html  renderer.py
src/hybrid_rag/presentation/: __init__.py  cli.py  stepper.py  web.py
tests/: test_e2e.py  test_use_cases.py
tests/fixtures/: pdf_factory.py
